--- a/scss/shared.scss
+++ b/scss/shared.scss
@@ -2,7 +2,6 @@ html {
   width: 100%;
   height: 100%;
   overflow: hidden;
-
 }
 body {
   font-family: sans-serif;
@@ -10,11 +9,11 @@ body {
   width: 100%;
   height: 100%;
   overflow: auto;
-
 }
 
 .body-container {
   overflow: auto;
+  -webkit-overflow-scrolling: touch;
 }
 
 .color-picker-main-container {
@@ -22,5 +21,4 @@ body {
   width: 100%;
   font-size: 22px;
   font-family: sans-serif;
-  overflow: auto;
 }
